Made the AI recode it

--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneak 8, Fractured</title>
+    <title>Sneak 8, Fractured - A Sci-Fi Stealth Adventure</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
     <header>
+        <!-- Main navigation and game title -->
         <h1>Sneak 8, Fractured</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">About the Game</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <section id="about">
+        <!-- About the game section with description -->
         <h2>About the Game</h2>
-        <p>Welcome to Sneak 8, Fractured, the latest installment in the beloved Sneak series. Dive into a world of espionage and intrigue where your choices determine the fate of the world.</p>
+        <p>Welcome to Sneak 8, Fractured, the latest installment in the beloved Sneak series. Experience a futuristic world where espionage and high-tech intrigue shape the narrative.</p>
     </section>
     <section id="features">
+        <!-- Game features with a list of highlights -->
         <h2>Game Features</h2>
         <ul>
-            <li>Immersive stealth mechanics</li>
-            <li>Dynamic storyline with multiple endings</li>
-            <li>Advanced AI opponents</li>
-            <li>Highly detailed environments</li>
+            <li>Immersive stealth mechanics in a high-tech universe</li>
+            <li>Dynamic storyline with branching paths and multiple outcomes</li>
+            <li>Advanced AI with realistic behavior patterns</li>
+            <li>Futuristic environments with interactive elements</li>
         </ul>
     </section>
     <footer>
+        <!-- Contact information -->
         <p>Contact us at <a href="mailto:contact@sneak8game.com">contact@sneak8game.com</a></p>
     </footer>
 </body>
