--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneak 8, Fractured - Home</title>
+    <title>Sneak 8, Fractured - Contact</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Sneak 8, Fractured</h1>
+        <h1>Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,9 +18,17 @@
             </ul>
         </nav>
     </header>
-    <section id="about">
-        <h2>Welcome to Sneak 8, Fractured</h2>
-        <p>Embark on a stealth adventure in a futuristic world where your decisions have monumental consequences. Explore the intrigue and mystery of the Fractured universe.</p>
+    <section>
+        <h2>Get in Touch</h2>
+        <form>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name"><br><br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email"><br><br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message"></textarea><br><br>
+            <input type="submit" value="Send">
+        </form>
     </section>
     <footer>
         <p>Contact us at <a href="mailto:contact@sneak8game.com">contact@sneak8game.com</a></p>
