--- a/features.html
+++ b/features.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sneak 8, Fractured - Home</title>
+    <title>Sneak 8, Fractured - Features</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Sneak 8, Fractured</h1>
+        <h1>Game Features</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,9 +18,14 @@
             </ul>
         </nav>
     </header>
-    <section id="about">
-        <h2>Welcome to Sneak 8, Fractured</h2>
-        <p>Embark on a stealth adventure in a futuristic world where your decisions have monumental consequences. Explore the intrigue and mystery of the Fractured universe.</p>
+    <section>
+        <h2>Detailed Features</h2>
+        <ul>
+            <li>Advanced stealth mechanics and gear customization</li>
+            <li>Interactive environments with real-time effects</li>
+            <li>Non-linear story progression with multiple endings</li>
+            <li>High-fidelity graphics and immersive sound design</li>
+        </ul>
     </section>
     <footer>
         <p>Contact us at <a href="mailto:contact@sneak8game.com">contact@sneak8game.com</a></p>
